--- a/index.html
+++ b/index.html
@@ -186,14 +186,42 @@ footer{
                 
                 <div class="story-section">
                     <p>
-                        Born into the wealthy Wayne family, young Bruce's life was shattered by tragedy. 
-                        Swearing an oath to rid Gotham City of evil, he trained his mind and body to perfection. 
-                        He adopted a symbol of the dark to strike fear into criminals. He became the Batman.
+                        <p>
+Bruce Wayne was born rich. Like betam rich. 
+Big house, clean suits, everything luxury. Life was smooth… until one night in Gotham. 
+That night changed everything. Endet new life like this?
+</p>
+
+<p>
+Instead of crying forever and saying “yene gud,” Bruce stood up. 
+He said, “Enough. I will not let fear control me.” 
+While other rich kids were enjoying soft life, Bruce was training hard. 
+Push-ups, martial arts, mind discipline — betam serious.
+</p>
+
+<p>
+He traveled the world, learning how criminals think. 
+He trained until his body said “bas!” but he said “aydelem.” 
+No superpowers. Just discipline, focus, and zero fear.
+</p>
+
+<p>
+Then he realized something important: people fear symbols. 
+So he chose a bat. Why a bat? Because even in Addis, 
+if something flies near you at night, inde? you’re already running.
+</p>
+
+<p>
+That’s how Bruce Wayne stopped being just a rich boy 
+and became Batman. Ye Gotham lijoch now know — 
+if you see shadow moving… better say “sorry” and run.
+</p>
+
                     </p>
                 </div>
 
                 <div class="quote">
-                    "I am vengeance. I am the night. I am Batman."
+                    "THIS IS BATMAN STORY WRITTEN ON SINGLE WEB PAGE."
                 </div>
 
                 <div class="theme-controls-wrapper">
@@ -206,7 +234,7 @@ footer{
                 </div>
 
                 <footer>
-                    code written by Abele
+                    code written by AbelE.
                 </footer>
             </div>
         </div>
